test_programs/compile_failure/noirc_frontend_tests_deny_capturing_mut_var_as_param_to_function_in_nested_lambda/src/main.nr

    fn main() {
        let mut x = 3;
        let f = || { 
            let inner = || mutate(&mut x); 
            inner();
        };
        f();
        assert(x == 3);
    }

    fn mutate(x: &mut Field) {
        *x = 5;
    }
    